# sonoma-wallpaper-downloader

./: .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_1.0.5.md  app.js  build-and-sign.sh  custom.css  index.html  main.js  package.json  preload.js  puppertino.css
.claude/: settings.local.json
js/: createLinksList.js  downloadProgress.js  reorderJson.js  sortJson.js
public/: index.html
scripts/: notarize-tauri.sh  notarize.js
src/: App.css  index.js
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: App.js  DownloadItem.js  DownloadList.js  MigrationNotice.js  ProgressBar.js  UpdateNotification.js
src/electron/: main.js  preload.js
src/services/: dataService.js  downloadItem.js  downloadService.js  tauriApi.js  updateService.js
src/utils/: fileUtils.js  reorderJson.js  sortJson.js
website/: index.html
website/css/: custom.css  style.css
website/js/: app.js
