[package]
name = "macos-video-downloader"
version = "1.0.4"
description = "macOS Video Downloader - Download macOS Sonoma video wallpapers"
authors = ["Your Name"]
license = ""
repository = "https://github.com/your-github-username/macos-sonoma-video-downloader"
edition = "2021"
rust-version = "1.77.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
plist = "1.8"
tokio = { version = "1.48", features = ["full"] }
urlencoding = "2.1"
